objects/DMD_CustomObject_2__c.object
<CustomObject>
    <description>To test US-0003744</description>
    <fields>
        <fullName>DMD_Field_1__c</fullName>
        <label>DMD_Field_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_Field_2__c</fullName>
        <label>DMD_Field_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_Field_3__c</fullName>
        <label>DMD_Field_3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DMD CustomObject_2</label>
    <nameField>
        <label>DMD CustomObject_2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMD CustomObjects_2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>